syntax = "proto2";

package archive;
option go_package = "github.com/LeelaChessZero/lc0ar/archive";

message FileMetadata {
  optional string name = 1;
  optional uint32 size_bytes = 2;
}

message TrainingDataArchive {
  optional string magic = 1;
  optional uint32 version = 2;
  optional uint32 payload_size_bytes = 3;
  enum PayloadType {
    PLAIN_DATA = 1;
    TRANSPOSED_DATA = 2;
  }
  optional PayloadType payload_type = 4;
  repeated FileMetadata file_metadata = 5;
  optional uint32 transposition_page_size_bytes = 6;
};